# scrape-main

./: .gitignore  Cargo.toml  README.md
examples/: agent_demo.rs  orchestrator_demo.rs  parse_chat.rs  storage_demo.rs  tui_demo.rs
src/: error.rs  lib.rs  main.rs
src/agents/: agent.rs  mod.rs  orchestrator.rs  orchestrator_test.rs  tests.rs
src/api/: auth.rs  dashboard.rs  mod.rs  stream.rs
src/browser/: manager.rs  mod.rs  stealth.rs  tests.rs
src/config/: mod.rs
src/parser/: chat_message.rs  data_processor.rs  html_parser.rs  mod.rs  quality_metrics.rs
src/scraper/: mod.rs  simple.rs
src/static/: dashboard.html
src/storage/: mod.rs
src/tui/: mod.rs  mod_broken.rs  run.rs
src/webhooks/: discord.rs  mod.rs
